fixed z-index bug for autocomplete inside modal

--- a/client/src/scss/bootstrap-theme.scss
+++ b/client/src/scss/bootstrap-theme.scss
@@ -113,3 +113,6 @@ $navbar-dark-hover-color: rgba(#ffffff, 1) ;
 .ui-front {
     z-index: $zindex-tooltip;
 }
+.ui-front.ui-autocomplete {
+    z-index: #{$zindex-tooltip+1};
+}
